--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@main # required!
         
       - name: '>> Dart package <<'
-        uses: srcker/srcker_flutter_utils@master
+        uses: srcker/srcker_flutter_utils@main
         with:
           accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
