--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,7 +19,11 @@ jobs:
         uses: actions/checkout@main # required!
         
       - name: '>> Dart package <<'
-        uses: srcker/srcker_flutter_utils@main
+        uses: k-paxian/dart-package-publisher@master
         with:
           accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
+          suppressBuildRunner: true
+          flutter: true
+          skipTests: true
+          force: true
