--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -5,11 +5,11 @@
 
 name: Dart
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: create
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
 
 jobs:
   publishing:
